syntax = "proto3";

package envoy.config.filter.http.nats.streaming.v2;

option java_package = "io.envoyproxy.envoy.config.filter.http.nats.streaming.v2";
option java_outer_classname = "NatsStreamingProto";
option java_multiple_files = true;
import "google/protobuf/duration.proto";
import "validate/validate.proto";

// [#protodoc-title: NatsStreaming]
// NATS Streaming :ref:`configuration overview
// <config_http_filters_nats_streaming>`.

// [#proto-status: experimental]
message NatsStreaming {
  string cluster = 1 [ (validate.rules).string.min_bytes = 1 ];
  uint32 max_connections = 2;
  google.protobuf.Duration op_timeout = 3;
}

message NatsStreamingPerRoute {
  string subject = 1 [ (validate.rules).string.min_bytes = 1 ];
  string cluster_id = 2 [ (validate.rules).string.min_bytes = 1 ];
  string discover_prefix = 3 [ (validate.rules).string.min_bytes = 1 ];
}
